# ADAPT

./: README.md  checker.py  pdf_checker.py  pdf_fixer.py  pyproject.toml
checker/: docx_checker.py
fixers/: docx_fixer.py
tests/: tests.MD
