[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapt-wcag-tool"
version = "0.1.0"
description = "WCAG Accessibility 2.2 checker and fixer for PDF, DOCX, and PPTX"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pymupdf>=1.24",
    "pikepdf>=9.0",
    "python-docx>=1.1",
    "python-pptx>=0.6.23",
    "lxml>=5.0",
    "Pillow>=10.0",
    "transformers>=4.44",
    "torch>=2.3",
    "torchvision>=0.18",
    "accelerate>=0.30",
    "safetensors>=0.4",
    "numpy>=1.26",
    "wcag-contrast-ratio>=0.9"
]
